--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
     <!--Score-->
         <div id="scoreboard-container">
+            <h2>Placar:</h2>
             <span class="score-box">
                 <span id="x-scoreboard">X</span>:
                 <span id="scoreboard-1">0</span>
